Fix devicon tooltips sizing, improve about page on small screen sizes

--- a/landing_page.css
+++ b/landing_page.css
@@ -227,6 +227,7 @@ body{
 
 #tech_icons{
     padding-top: 10px;
+    margin: 0 10px 0 10px;
 }
 
 #projects{
@@ -256,6 +257,7 @@ body{
 }
 
 .pro_desc{
+    width: 100%;
     padding-left: 20px;
 }
 
@@ -321,15 +323,13 @@ body{
     background-color: var(--tooltip_color);
     color: var(--alt_color);
     font-size: 1rem;
+    font-family: var(--text_font);
     text-align: left;
     position: absolute;
-    margin-top: 5px;
-    margin-left: 20px;
-    padding: 5px 8px 8px 8px;
+    padding: 5px 3px 5px 3px;
     border-radius: 10px;
     z-index: 1;
     border: solid 1px var(--alt_color);
-    font-weight: 505;
     box-shadow: 0 0 5px 1px var(--alt_color);
 }
 
@@ -342,6 +342,7 @@ body{
 }
 
 .paragraph{
+    width: 100%;
     text-align: left;
     font-size: clamp(1.2rem, 3vw, 1.5rem);
 }
